feat: Add vm update (#5)
